Fix embedded JRE + JFX module path