@@ -174,6 +174,11 @@
 				<classpath dir="${dir.dist}/lib" />
 				<librarypath dir="${dir.lib}/native/mac-x86_64" />
 
+				<option value="--module-path" />
+				<option value="$APP_ROOT/Contents/PlugIns/jdk-${jre.version}.jdk/Contents/Home/ext/modules/lib" />
+				<option value="--add-modules" />
+				<option value="ALL-MODULE-PATH" />
+
 				<!-- include command-line tools -->
 				<librarypath dir="@{dir}">
 					<include name="*.sh" />
